# smantic

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: README.md  app.py  requirements.txt
docker/: Dockerfile
smantic/: __init__.py  __main__.py  adapters.py  block_splitters.py  chunker.py  config.py  embedder.py  ir.py  markdown.py  models.py  text_dedup.py
smantic/server/: __init__.py  main.py  schemas.py
tests/: test_adapters.py  test_block_splitters.py  test_chunker.py  test_embedder.py  test_hierarchical.py  test_markdown.py  test_public_api.py  test_server.py  test_text_dedup.py
