[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "smantic"
version = "0.1.1"
description = "Structure-aware semantic chunking, minus the heavyweight stack."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Bei Mi Chen" }]
keywords = [
    "chunking", "semantic-chunking", "text-splitting", "rag", "retrieval",
    "document-ai", "onnx", "embeddings", "nlp", "hierarchical-chunking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

# Core dep: the chunker math. Markdown parsing, the IR, block splitting, and
# small-chunk merging all run on stdlib + numpy alone. Deliberately torch-free,
# transformers-free, and paddle-free. Semantic boundary detection is the [onnx]
# extra; without it the chunker still runs on structural boundaries.
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# Semantic boundary detection: all-MiniLM-L6-v2 ONNX embeddings on raw
# onnxruntime + the Rust tokenizers lib (no torch, no transformers). The model
# is fetched from the Hugging Face Hub on first use and cached on disk.
onnx = [
    "onnxruntime>=1.17",
    "tokenizers>=0.20",
    "huggingface_hub>=0.23",
]
# FastAPI service.
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# Dev tooling. httpx powers FastAPI's TestClient for the server tests.
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "httpx>=0.27"]

[project.scripts]
smantic = "smantic.__main__:main"
smantic-serve = "smantic.server.main:run"

[project.urls]
Homepage = "https://github.com/beimichen/smantic"
Repository = "https://github.com/beimichen/smantic"
Issues = "https://github.com/beimichen/smantic/issues"

[tool.setuptools.packages.find]
include = ["smantic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download the embedding model or run real ONNX inference (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Ported modules keep dense, intentional comments and a few long lines.
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter markers are designed to be called in argument defaults.
extend-immutable-calls = [
    "fastapi.Query", "fastapi.Depends", "fastapi.Body",
]
